# ELKTool

./: .gitignore  Cargo.toml  README.md  build_images.sh  deploy.sh  elktool-core.service  elktool-lifetimes.service  elktool-replicate.service  elktool-sanitize.service  elktool.service  install.sh  run-core.sh  run-lifetimes.sh  run-replicate.sh  run-sanitize.sh  run.sh  workflow.toml
config_examples/: App_Index.toml  Policy.toml  Replicate.toml  Sanitize.toml  Settings.toml  Transforms.toml
crates/core/: Cargo.toml
crates/core/src/: main.rs
crates/core/src/alerts_api_funcs/: alert.rs  alert_api_funcs.rs
crates/core/src/app_index/: app_index.rs  config.rs  mod.rs
crates/core/src/transform/: haproxy_transforms.rs  jdbc_index_search_result.rs  jdbc_transforms.rs  missing_query.rs  mod.rs
crates/lib/: .gitignore  Cargo.toml
crates/lib/src/: lib.rs
crates/lib/src/alerts_api_funcs/: alert_api_funcs.rs  mod.rs
crates/lib/src/app_index/: app_index.rs  config.rs
crates/lib/src/common/: haproxy_index.rs  haproxy_index_entities.rs  haproxy_index_search_result_entities.rs  healthcheck_entities.rs  jdbc_index_entities.rs  missing_query.rs  mod.rs
crates/lib/src/ilm_api/: ilm_api_funcs.rs  mod.rs
crates/lib/src/index_api/: elasticindex.rs  index_api_funcs.rs  mod.rs
crates/lifetimes/: .gitignore  Cargo.toml
crates/lifetimes/src/: main.rs
crates/replicate/: Cargo.toml
crates/replicate/src/: main.rs
crates/sanitize/: Cargo.toml
crates/sanitize/src/: main.rs
dockerfiles/: elktool-core.Dockerfile  elktool-lifetimes.Dockerfile  elktool-replicate.Dockerfile  elktool-sanitize.Dockerfile
kube/: core.yml  elktool-namespace.yml  lifetimes.yml  replicate.yml  sanitize.yml
samples/: haproxy.json
src/: main.rs
src/alerts_api_funcs/: alert.rs  alert_api_funcs.rs  discord.rs  email.rs  mod.rs
src/ilm_api/: ilm_api_funcs.rs  ilmindex.rs
src/index_api/: index_api_funcs.rs
src/repository_api/: repo_api_funcs.rs
src/search_api/: mod.rs
src/snapshot_api/: snapshot.rs  snapshot_api_funcs.rs
src/src/: main.rs
src/src/alerts_api_funcs/: alert.rs  alert_api_funcs.rs  discord.rs  email.rs
src/src/ilm_api/: ilm_api_funcs.rs
src/src/index_api/: replicassetting.rs
src/src/repository_api/: mod.rs  repo_api_funcs.rs
src/src/search_api/: search_api_funcs.rs
src/src/snapshot_api/: snapshot_api_funcs.rs
src/src/sql_api/: note
src/src/tests/: general_tests.rs
src/src/transform/: mod.rs
src/tests/: general_tests.rs
src/transform/: haproxy_index_search_result.rs  mod.rs
(+23 files in other folders)
