[package]
name = "Elktool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.95"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
config = {version = "0.13.1", features = ["json5"] }
chrono = "0.4.26"
substring = "1.4.5"
sysinfo = "0.29.10"
serde_derive = "1.0.188"
lettre = "0.11.4"
