[package]
name = "elktool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["derive"]}
serde_json = "1.0.116"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
config = {version = "0.14.0", features = ["json5"] }
chrono = "0.4.38"
substring = "1.4.5"
sysinfo = "0.30.11"
serde_derive = "1.0.197"
lettre = "0.11.6"
