[package]
name = "elktool-sanitize"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
config = {version = "0.14.0", features = ["json5"] }
escape_string = "0.1.2"
lettre = "0.11.7"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"]}
serde_derive = "1.0.203"
serde_json = "1.0.117"
substring = "1.4.5"
sysinfo = "0.30.12"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
urlencoding = "2.1.3"
whoami = "1.5.1"
elktool-lib = { path = "../lib" }
